# SSIR

./: .gitignore  .gitmodules  Directory.lua  Main.lua  Run_Split_Stems.lua  SplitStems.lua  aliases.lua  index.html  index.xml  println.lua  requirements.txt  run-spleeter.bat
.github/workflows/: AssetsWorkflow.yml  DemucsEnvs.yml  SpleeterEnvs.yml
run_demucs/: CMakeLists.txt  vcpkg.json
run_demucs/include/: extract_tar_gz.hpp
run_demucs/script/: install-demucs-nvidia.bat  install-demucs-nvidia.sh  install-demucs.bat  install-demucs.sh  run-demucs.bat  run-demucs.sh
run_demucs/src/: extract_tar_gz.cpp  main.cpp
run_spleeter/: CMakeLists.txt  vcpkg.json
run_spleeter/include/: check_demucs.hpp
run_spleeter/src/: check_demucs.cpp  main.cpp
script/: Run_Split_Stems.lua  SplitStems.lua  SplitStemsPrompt.lua
